updating index.html to Arial font to fix single letter text lines and messed up spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@
 /*SETUP AND Z-INDEX*/
 /*-------------------------------------------------------------------------*/
 body {
-    font-family: "Rational Text", Arial, Helvetica, sans-serif;
+    font-family: "Helvetica", Arial, sans-serif;
     font-size: 14px;
     background-color: #EDF5FC;
 }
